# oceanbluesky.github.io

./: .gitattributes  .gitignore  404.html  Cargo.toml  Dioxus.toml  Dockerfile  Er_Directions.md  First project - The Trunk Guide.webloc  Installation - Tailwind CSS.webloc  README.Docker.md  README.md  Trunk.toml  __about_these_files.md  _config.yml  build.rs  compose.yaml  feed.xml  index.html  package-lock.json  package.json  postcss.config.js  robots.txt  sitemap.xml  tailwind.config.js
.github/workflows/: deploy.yml
_pages/: about_einstein.md
_pages/dropdown/: index.html
assets/: tailwind.css
assets/css/: style.css
assets/js/: search-data.js
assets/jupyter/: blog.ipynb.html
assets/styles/: tailwind.css
blog/: contents.html  index.html  post_001..html  post_002.html  post_003..html
blog/2015/: index.html
blog/2020/: index.html
blog/2021/: index.html
blog/2022/: index.html
blog/2023/: index.html
blog/2024/: index.html
blog/2025/: index.html
books/: index.html
books/2025/: index.html
books/the_godfather/: index.html
cv/: index.html
news/: index.html
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
people/: index.html
projects/: index.html
projects/1_project/: index.html
projects/2_project/: index.html
projects/3_project/: index.html
projects/4_project/: index.html
projects/5_project/: index.html
projects/6_project/: index.html
projects/7_project/: index.html
projects/8_project/: index.html
projects/9_project/: index.html
public/css/: index.css
publications/: index.html
repositories/: index.html
src/: lib.rs  main.rs
src/components/: about.html  about.rs  app.rs  (+15 more)
teaching/: index.html
(+80 files in other folders)
