[package]
name = "github_bio"
version = "0.1.0"
edition = "2021"


[dependencies]
dioxus = { version = "^0.5.6", features = ["router", "web"] }
dioxus-web = "^0.5.6"
dioxus-router = "^0.5.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
stylist = "^0.13"
manganis = "^0.2"

# Allow wasm-bindgen to update dynamically while staying within major version 0.2
wasm-bindgen = "^0.2.97"


[web.watcher]
index_on_404 = true

