
# Cargo.toml

[package]
name = "github_io"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "^0.6.0", features = ["router", "web"] }
dioxus-web = "^0.6.0"
dioxus-router = "^0.6.0"
serde = { version = "^1.0.216", features = ["derive"] }
serde_json = "^1.0"
stylist = "^0.13"

[build-dependencies]
dotenv = "^0.15"   # Build dependency for environment variables

[features]
default = []
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
